--- a/src/i18n/messages/es_es.json
+++ b/src/i18n/messages/es_es.json
@@ -1,1 +1,94 @@
-{}
+{
+  "payment.error.fetch.basket": "Ha ocurrido un error inesperado. Si el problema persiste, por favor {supportLink}.",
+  "payment.error.fetch.basket.support.fragment": "contacta al equipo de soporte de edX",
+  "payment.messages.enrollment-code-product-info.header": "¿Comprando solo para ti?",
+  "payment.messages.enrollment-code-product-info.body": "Si estás comprando para otra persona, por favor continua con el proceso de compra. Sin embardo, si eres el estudiante {link}",
+  "payment.messages.enrollment-code-product-info.link": "haga clic aquí para inscribirte directamente",
+  "payment.messages.enrollment.code.product.info.quantity.updated.header": "Hemos actualizado tu cantidad.",
+  "payment.messages.enrollment.code.product.info.quantity.updated.body": "Tu carrito incluye {quantity} códigos de inscripción con un coste total de {price}, que recibirás vía correo electrónico.",
+  "payment.messages.transaction.declined.body": "No se pudo procesar su pago. Por favor revise su información de pago o contacte su banco o institución financiera para mayor asistencia.",
+  "payment.messages.key.timeout.body": "For security, your credit card information will then need to be re-entered to complete your purchase.",
+  "payment.messages.key.timeout.2mins.header": "Please complete your purchase within two minutes",
+  "payment.messages.key.timeout.1min.header": "Please complete your purchase within one minute",
+  "payment.bulk.summary.table.label.price": "Precio",
+  "payment.bulk.summary.table.label.quantity": "Cantidad",
+  "payment.bulk.summary.table.label.subtotal": "Subtotal",
+  "payment.screen.reader.cart.details.loaded": "Los detalles sobre su carro de compra están cargados. ",
+  "payment.section.cart.label": "Detalles de carro de compras",
+  "payment.productlineitem.purchase.cart.heading": "En tu carro de compras",
+  "payment.productlineitem.purchase.cart.subheading": "Tu compra contiene lo siguiente:",
+  "payment.screen.reader.cart.details.loading": "Cargando, por favor espere...",
+  "payment.coupon.label": "Añadir código de cupón (opcional)",
+  "payment.coupon.submit": "Aplicar",
+  "payment.coupon.benefit.absolute": "Cupón {code} aplicado para un descuento de {amount}",
+  "payment.coupon.benefit.percentage": "Cupón {code} aplicado para un descuento de {amount}%",
+  "payment.coupon.benefit.default": "Cupón {code} aplicado",
+  "payment.coupon.remove": "Eliminar",
+  "payment.currency.disclaimer": "* Este total contiene una conversión aproximada. Usted será cargado {actualAmount} {actualCurrencyCode}.",
+  "payment.summary.discount.offer": "{benefit} descuento otorgado por {provider}.",
+  "payment.summary.discount.dynamic_offer": "{benefit} de descuento aplicado por tu primer certificado.",
+  "payment.summary.table.label.discount.total": "Descuentos aplicados",
+  "payment.order.details.course.entitlement": "Después de completar su orden, podrá seleccionar las fechas del curso desde su panel de control.",
+  "payment.order.details.course.seat.verified": "Después de completar su orden será automáticamente inscrito en el modo verificado del curso.",
+  "payment.order.details.course.seat.credit": "Después de completar su orden recibirá crédito para su curso.",
+  "payment.order.details.course.seat": "Después de completar su orden será automáticamente inscrito en el curso.",
+  "payment.order.details.enrollment.code.terms": "Al comprar, tú y tu organización aceptan los siguientes términos:",
+  "payment.order.details.enrollment.code.first.term": "Cada código es válido para el curso incluido y solo se puede usar una vez.",
+  "payment.order.details.enrollment.code.second.term": "Tú eres el responsable de distribuir los códigos a los estudiantes en tu organización.",
+  "payment.order.details.enrollment.code.third.term": "Cada código vencerá en un año a partir de la fecha de compra o, si ocurre antes, una vez que se cierre el curso.",
+  "payment.order.details.enrollment.code.fourth.term": "Si un curso no está diseñado para tomarlo a tu propio ritmo, deberías confirmar que alguna edición del curso está disponible antes de la expiración.",
+  "payment.order.details.enrollment.code.fifth.term": "No debe revender códigos a terceros.",
+  "payment.order.details.enrollment.code.sixth.term": "Todas las ventas de edX for Business son finales y no califican para reembolso.",
+  "payment.order.details.enrollment.code.receive.email": "Recibirá un correo electrónico en {user_email} con su código(s) de inscripción.",
+  "payment.order.details.heading": "Resumen",
+  "payment.productlineitem.professional.certificate": "Certificado Profesional",
+  "payment.productlineitem.verified.certificate": "Certificado verificado",
+  "payment.summary.table.label.price": "Precio",
+  "payment.summary.table.label.total.to.pay": "TOTAL",
+  "payment.update.quantity.label": "Cantidad",
+  "payment.update.quantity.field.help.text": "Máximo: {number}",
+  "payment.update.quantity.submit.button": "Actualizar",
+  "payment.select.payment.method.heading": "Selecciona un método de pago",
+  "payment.section.payment.details.label": "Detalles del pago",
+  "payment.page.method.type.credit": "Tarjeta de crédito",
+  "payment.page.method.type.paypal": "PayPal",
+  "payment.form.submit.button.text": "Colocar la orden",
+  "payment.card.details.billing.information.heading": "Información de facturación",
+  "payment.card.details.expiration.month.label": "Mes de expiración",
+  "payment.card.details.expiration.year.label": "Año de expiración",
+  "payment.page.card.details.month": "Mes",
+  "payment.page.card.details.year": "Año",
+  "payment.card.holder.information.heading": "Información del titular de la tarjeta",
+  "payment.card.holder.information.first.name.label": "Nombre (requerido)",
+  "payment.card.holder.information.last.name.label": "Apellido (requerido)",
+  "payment.card.holder.information.organization.label": "Organización (requerida)",
+  "payment.card.holder.information.address.label": "Dirección (requerida)",
+  "payment.card.holder.information.unit.label": "Número de casa/apartamento",
+  "payment.card.holder.information.city.label": "Ciudad (requerida)",
+  "payment.card.holder.information.country.label": "País (requerido)",
+  "payment.card.holder.information.postal.code.label": "Código Postal",
+  "payment.card.holder.information.purchased.for.organization": "Estoy comprando a nombre de mi empleador o de otra organización",
+  "payment.card.holder.information.country.options.empty": "Seleccione un país",
+  "payment.card.details.number.label": "Número de tarjeta (requerido)",
+  "payment.card.details.security.code.label": "Código de seguridad (requerido)",
+  "payment.card.details.security.code.help.text": "Los tres últimos dígitos en el área de firma en la parte posterior de su tarjeta. Para American Express, son los cuatro dígitos en la parte frontal de la tarjeta.",
+  "payment.form.errors.invalid.card.number": "Número de tarjeta invalido",
+  "payment.form.errors.unsupported.card": "Tipo de tarjeta no soportado",
+  "payment.form.errors.invalid.security.code": "Número de seguridad invalido",
+  "payment.form.errors.card.expired": "Tarjeta vencida",
+  "payment.form.errors.required.field": "Este campo es requerido",
+  "payment.card.holder.information.state.label": "Estado/Provincia (requerido)",
+  "payment.card.holder.information.state.required.label": "Estado/Provincia",
+  "payment.card.holder.information.state.options.empty": "Elige estado/provincia",
+  "payment.empty.basket.heading": "Su cesto está vacío.",
+  "payment.empty.basket.message": "Si intentó realizar una compra , no ha sido cargado ningún cobro. Regresa a tu {actionLinkOne} para intentar otra vez, o {actionLinkTwo}.",
+  "payment.empty.basket.dashboardURL": "panel de control",
+  "payment.empty.basket.supportURL": "contacte a edX E-commerce Support",
+  "payment.apple.pay.pay.with.apple.pay": "Pagar con Apple Pay",
+  "payment.type.paypal": "PayPal",
+  "payment.page.heading": "Pago",
+  "payment.loading.payment": "Cargando carro de compra...",
+  "payment.loading.error": "Error: {error}",
+  "payment.apple.pay.merchant.validation.failure": "Apple Pay no está disponible en estos momentos. Por favor intente con otro método de pago.",
+  "payment.apple.pay.authorization.failure": "Ha ocurrido un error mientras se procesaba su pago. Por favor intente de nuevo, o seleccione otra forma de pago."
+}
